add hask validation
