# docs/swagger.json
@@ -122,6 +122,71 @@
                 }
             }
         },
+        "/auth/signature": {
+            "post": {
+                "description": "Generate Signature to authenticate api request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Signatures"
+                ],
+                "summary": "Signature API Request",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "HTTP Method",
+                        "name": "httpMethod",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Optional JSON body",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/books-api_internal_delivery_http_response.DataResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/books-api_internal_model.Signature"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/books-api_internal_delivery_http_response.DataResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/authors": {
             "get": {
                 "security": [
@@ -145,6 +210,13 @@
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
                         "in": "header",
                         "required": true
                     },
@@ -236,6 +308,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Author Request",
                         "name": "author",
                         "in": "body",
@@ -301,6 +380,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Author ID (UUID format)",
                         "name": "id",
                         "in": "path",
@@ -356,6 +442,13 @@
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
                         "in": "header",
                         "required": true
                     },
@@ -430,6 +523,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Author ID (UUID format)",
                         "name": "id",
                         "in": "path",
@@ -470,6 +570,13 @@
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
                         "in": "header",
                         "required": true
                     },
@@ -561,6 +668,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Book Request",
                         "name": "notification-list",
                         "in": "body",
@@ -621,6 +735,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Book ID (UUID format)",
                         "name": "id",
                         "in": "path",
@@ -671,6 +792,13 @@
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
                         "in": "header",
                         "required": true
                     },
@@ -735,6 +863,13 @@
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "generated from signature",
+                        "name": "X-Req-Signature",
                         "in": "header",
                         "required": true
                     },
@@ -847,6 +982,7 @@
         "books-api_internal_entity.UpsertAuthor": {
             "type": "object",
             "required": [
+                "birthdate",
                 "name"
             ],
             "properties": {
@@ -895,6 +1031,7 @@
                 "password": {
                     "description": "\"password\" custom validation assumed",
                     "type": "string",
+                    "minLength": 8,
                     "example": "SecurePass123!"
                 },
                 "username": {
@@ -930,6 +1067,15 @@
                     "description": "The total number of data",
                     "type": "integer",
                     "example": 50
+                }
+            }
+        },
+        "books-api_internal_model.Signature": {
+            "type": "object",
+            "properties": {
+                "signature": {
+                    "type": "string",
+                    "example": "asdkjhad7asjkdhb#%4jzhnjkfx8@"
                 }
             }
         },
